--- a/vke/CVKL.csproj
+++ b/vke/CVKL.csproj
@@ -14,7 +14,7 @@
     <WarningLevel>4</WarningLevel>
     <Optimize>false</Optimize>    
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-    <DefineConstants>DEBUG;_RENDERDOC;</DefineConstants>
+    <DefineConstants>DEBUG;RENDERDOC;</DefineConstants>
     <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -44,63 +44,7 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>        
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Activable.cs" />
-    <Compile Include="src\Buffer.cs" />
-    <Compile Include="src\Camera.cs" />
-    <Compile Include="src\CommandBuffer.cs" />
-    <Compile Include="src\CommandPool.cs" />
-    <Compile Include="src\ComputePipeline.cs" />
-    <Compile Include="src\DebugReport.cs" />
-    <Compile Include="src\DescriptorPool.cs" />
-    <Compile Include="src\DescriptorSet.cs" />
-    <Compile Include="src\DescriptorSetLayout.cs" />
-    <Compile Include="src\DescriptorSetWrites.cs" />
-    <Compile Include="src\Device.cs" />
-    <Compile Include="src\ExtensionMethods.cs" />
-    <Compile Include="src\FixedUtf8String.cs" />
-    <Compile Include="src\FrameBuffer.cs" />
-    <Compile Include="src\GraphicPipeline.cs" />
-    <Compile Include="src\GraphicPipelineConfig.cs" />
-    <Compile Include="src\Image.cs" />
-    <Compile Include="src\Instance.cs" />
-    <Compile Include="src\Model.cs" />
-    <Compile Include="src\NativeList.cs" />
-    <Compile Include="src\PbrModel.cs" />
-    <Compile Include="src\PbrModel2.cs" />
-    <Compile Include="src\PhysicalDevice.cs" />
-    <Compile Include="src\Pipeline.cs" />
-    <Compile Include="src\PipelineLayout.cs" />
-    <Compile Include="src\QueryPool.cs" />
-    <Compile Include="src\Queue.cs" />
-    <Compile Include="src\RenderPass.cs" />
-    <Compile Include="src\Resource.cs" />
-    <Compile Include="src\ShaderInfo.cs" />
-    <Compile Include="src\SubPass.cs" />
-    <Compile Include="src\SwapChain.cs" />
-    <Compile Include="src\Utils.cs" />
-    <Compile Include="src\Version.cs" />
-    <Compile Include="src\VertexAttribute.cs" />
-    <Compile Include="src\VkFormatSize.cs" />
-    <Compile Include="src\VkWindow.cs" />
-    <Compile Include="src\gl.cs" />
-    <Compile Include="src\glTFLoader.cs" />
-    <Compile Include="src\ktx.cs" />
-    <Compile Include="src\stb.cs" />
-    <Compile Include="src\glfw\CodePoint.cs" />
-    <Compile Include="src\glfw\Delegates.cs" />
-    <Compile Include="src\glfw\ErrorCode.cs" />
-    <Compile Include="src\glfw\Glfw3.cs" />
-    <Compile Include="src\glfw\InputAction.cs" />
-    <Compile Include="src\glfw\Key.cs" />
-    <Compile Include="src\glfw\Modifier.cs" />
-    <Compile Include="src\glfw\MonitorEvent.cs" />
-    <Compile Include="src\glfw\MonitorHandle.cs" />
-    <Compile Include="src\glfw\MouseButton.cs" />
-    <Compile Include="src\glfw\NativeString.cs" />
-    <Compile Include="src\glfw\VideoMode.cs" />
-    <Compile Include="src\glfw\VideoModePointer.cs" />
-    <Compile Include="src\glfw\WindowAttribute.cs" />
+    <Compile Include="**/*.cs" />    
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
