--- a/samples/VkvgCrowTest/VkvgCrowTest.csproj
+++ b/samples/VkvgCrowTest/VkvgCrowTest.csproj
@@ -38,7 +38,7 @@
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="glTFLoader">
       <HintPath>..\..\packages\glTF2Loader.1.1.3-alpha\lib\net35\glTFLoader.dll</HintPath>
@@ -53,20 +53,20 @@
       <HintPath>..\..\packages\System.Memory.4.5.2\lib\netstandard2.0\System.Memory.dll</HintPath>
     </Reference>
     <Reference Include="VK">
-      <HintPath>..\..\packages\Vulkan.0.1.2.5-alpha\lib\netstandard2.0\VK.dll</HintPath>
+      <HintPath>..\..\packages\Vulkan.0.1.2.6\lib\netstandard2.0\VK.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\vke\VKE.csproj">
-      <Project>{32B7E80D-BEA7-4811-B82D-CC2533069F0A}</Project>
-      <Name>CVKL</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\crow\Crow\Crow.csproj">
       <Project>{C2980F9B-4798-4C05-99E2-E174810F7C7B}</Project>
       <Name>Crow</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\vke\CVKL.csproj">
+      <Project>{32B7E80D-BEA7-4811-B82D-CC2533069F0A}</Project>
+      <Name>CVKL</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -75,7 +75,16 @@
   <ItemGroup>
     <EmbeddedResource Include="ui\fps.crow">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <LogicalName>vkvgCrowTest.fps.crow</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="ui\perfMsr.crow">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <LogicalName>vkvgCrowTest.perfMsr.crow</LogicalName>
+    </EmbeddedResource>        
+    <EmbeddedResource Include="ui\perfMeasures.crow">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <LogicalName>vkvgCrowTest.perfMeasures.crow</LogicalName>
+    </EmbeddedResource>        
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)spirv.targets" />    
