--- a/vke/CVKL.csproj
+++ b/vke/CVKL.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net471;netstandard2.0</TargetFrameworks>
     
     <Copyright></Copyright>
-    <AssemblyVersion>0.1.3</AssemblyVersion>
+    <AssemblyVersion>0.1.3.1</AssemblyVersion>
     <Description>C# vulkan library with IDispose model and references counting</Description>
     <Company></Company>
     <Product>CVKL</Product>
@@ -28,15 +28,16 @@
     
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <WarningLevel>4</WarningLevel>
+    <DebugType>full</DebugType>
     <Optimize>false</Optimize>    
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-    <DefineConstants>DEBUG;_RENDERDOC;NETSTANDARD;NETSTANDARD2_0</DefineConstants>    
+    <DefineConstants>_RENDERDOC;NETSTANDARD;NETSTANDARD2_0;DEBUG;NETFRAMEWORK;NET471</DefineConstants>    
   </PropertyGroup>
     
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
   </PropertyGroup>
-    
+      
   <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
     <Reference Include="System" />
     <Reference Include="System.Runtime" />        
