--- a/samples/deferred/deferred.csproj
+++ b/samples/deferred/deferred.csproj
@@ -31,8 +31,7 @@
     <Compile Include="EnvironmentPipeline.cs;deferredPbrRenderer.cs;shadowMapRenderer.cs" />
   </ItemGroup>     
     
-  <ItemGroup Condition="$(Configuration) == 'DebugCrow' ">    
-    <PackageReference Include="Crow.VK" Version="0.9.0-beta" />
+  <ItemGroup Condition="'$(Configuration)' == 'DebugCrow' ">    
     <Compile Include="../common/CrowWin.cs" />
     <Compile Include="main-crow.cs" />
     <EmbeddedResource Include="ui\**\*.*">
@@ -51,6 +50,7 @@
   <ItemGroup>
     <PackageReference Include="Vulkan" Version="0.1.2.8-beta" />            
     <ProjectReference Include="..\..\vke\CVKL.csproj" />    
+    <PackageReference Include="Crow.VK" Version="0.9.0-beta" />
   </ItemGroup> 
     
   <Import Project="$(SolutionDir)spirv.targets" />    
