--- a/samples/deferred/deferred.csproj
+++ b/samples/deferred/deferred.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="$(SolutionDir)netfx.props" />
+  <Import Project="../../netfx.props" />
   <PropertyGroup>
     <TargetFrameworks>net471;netstandard2.0</TargetFrameworks>
     <OutputPath>$(SolutionDir)build\$(Configuration)\</OutputPath>
@@ -48,7 +48,7 @@
   </ItemGroup>    
     
   <ItemGroup>
-    <PackageReference Include="Vulkan" Version="0.1.2.8-beta" />            
+    <PackageReference Include="Vulkan" Version="0.1.3" />            
     <ProjectReference Include="..\..\vke\CVKL.csproj" />    
     <PackageReference Include="Crow.VK" Version="0.9.0-beta" />
   </ItemGroup> 
