--- a/samples/pbr/pbr.csproj
+++ b/samples/pbr/pbr.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="$(SolutionDir)netfx.props" />
+  <Import Project="../../netfx.props" />
   <PropertyGroup>
     <TargetFrameworks>net471;netstandard2.0</TargetFrameworks>
     <OutputPath>$(SolutionDir)build\$(Configuration)\</OutputPath>
@@ -23,7 +23,7 @@
   </ItemGroup>    
     
   <ItemGroup>
-    <PackageReference Include="Vulkan" Version="0.1.2.8-beta" />            
+    <PackageReference Include="Vulkan" Version="0.1.3" />            
     <PackageReference Include="vkvg.net" Version="0.2.2-beta" />
   </ItemGroup>    
     
