--- a/vke/CVKL.csproj
+++ b/vke/CVKL.csproj
@@ -1,16 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="$(SolutionDir)netfx.props" />
+  <Import Project="../netfx.props" />
   <PropertyGroup>
     <TargetFrameworks>net471;netstandard2.0</TargetFrameworks>
     
     <Copyright></Copyright>
-    <AssemblyVersion>0.1.3.2</AssemblyVersion>
+    <AssemblyVersion>0.1.4</AssemblyVersion>
     <Description>C# vulkan library with IDispose model and references counting</Description>
     <Company></Company>
     <Product>CVKL</Product>
     <PackageId>CVKL</PackageId>
     <PackageTags>C# vulkan game library compute glfw</PackageTags>    
-    <PackageVersion>$(AssemblyVersion)-beta</PackageVersion>
+    <PackageVersion>$(AssemblyVersion)</PackageVersion>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
     <PackageProjectUrl>https://github.com/jpbruyere/vk.net/blob/master/README.md</PackageProjectUrl>
@@ -48,7 +48,7 @@
   </ItemGroup>    
   <ItemGroup>
     <PackageReference Include="glTF2Loader" Version="1.1.3-alpha" />
-    <PackageReference Include="Vulkan" Version="0.1.2.8-beta" />        
+    <PackageReference Include="Vulkan" Version="0.1.3" />        
   </ItemGroup>
   <ItemGroup>        
     <None Remove="shaders\**\*.frag;shaders\**\*.vert;shaders\**\*.comp;shaders\**\*.geom" />
