--- a/samples/compute/compute.csproj
+++ b/samples/compute/compute.csproj
@@ -14,6 +14,10 @@
     <DefineConstants>TRACE;DEBUG;NETSTANDARD;NETSTANDARD2_0</DefineConstants>    
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <AllowUnsafeBlocks></AllowUnsafeBlocks>
+    <DefineConstants></DefineConstants>
+    <DefineConstants>TRACE;RELEASE;NETFRAMEWORK;NET471</DefineConstants>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
     
   <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
