--- a/VK/vulkan.csproj
+++ b/VK/vulkan.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>net471;netstandard2.0</TargetFrameworks>
     
     <Copyright></Copyright>
-    <AssemblyVersion>0.1.3</AssemblyVersion>
+    <AssemblyVersion>0.1.4</AssemblyVersion>
     <AssemblyName>VK</AssemblyName>
     <Description>C# vulkan binding</Description>
     <Company></Company>
@@ -12,7 +12,7 @@
         
     <PackageId>Vulkan</PackageId>
     <PackageTags>C# vulkan net binding</PackageTags>    
-    <PackageVersion>$(AssemblyVersion)</PackageVersion>        
+    <PackageVersion>$(AssemblyVersion)-beta</PackageVersion>        
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/jpbruyere/vk.net/blob/master/README.md</PackageProjectUrl>
     <PackageLicense>https://opensource.org/licenses/MIT</PackageLicense>
