--- a/vk.rewrite/vk.rewrite.csproj
+++ b/vk.rewrite/vk.rewrite.csproj
@@ -1,10 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="../netfx.props" />
+  <Import Project="$(RootDirectory)netfx.props" />
   <PropertyGroup>
-    <TargetFrameworks>net471;netstandard2.0</TargetFrameworks>
     <OutputType>Exe</OutputType>        
-    <RepositoryUrl>https://github.com/jpbruyere/vk.net</RepositoryUrl>
-    <License>https://opensource.org/licenses/MIT</License>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
             
